Fix zoomed in bug on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2986,6 +2986,10 @@ video {
   align-self: flex-end;
 }
 
+.scroll-smooth{
+  scroll-behavior: smooth;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
